<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Welcome Message -->


    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to BeFit"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:visibility="visible" />


    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:textStyle="italic"
        android:layout_below="@id/loginRegisterButton"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textIsSelectable="false" />



    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/befit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo_description"
        android:layout_below="@id/welcomeTextView" />

    <!-- Username EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_below="@id/logoImageView"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorHintText"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColor="@color/colorButtonText"
            android:textColorHint="@color/colorHintText" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password EditText -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_below="@id/usernameInputLayout"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorHintText"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorButtonText"
            android:textColorHint="@color/colorHintText" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorButtonText"
        android:clickable="true"
        android:focusable="true"
        android:layout_below="@id/passwordInputLayout"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <!-- Register Button -->
    <Button
        android:id="@+id/loginRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/rounded_button"
        android:textColor="@color/colorButtonText"
        android:clickable="true"
        android:focusable="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

</RelativeLayout>
